--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "isomorphic-fetch": "^2.2.1",
     "method-override": "^2.3.9",
     "morgan": "^1.8.2",
+    "nodemon": "^1.11.0",
     "pg-promise": "^6.3.6"
   }
 }
