--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-     "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
     "dev": "nodemon app.js",
     "debugger": "DEBUG=*:* npm run dev"
@@ -26,6 +26,7 @@
     "express": "^4.15.3",
     "isomorphic-fetch": "^2.2.1",
     "method-override": "^2.3.9",
+    "moment": "^2.18.1",
     "morgan": "^1.8.2",
     "nodemon": "^1.11.0",
     "pg-promise": "^6.3.6"
