--- a/package.json
+++ b/package.json
@@ -20,15 +20,20 @@
   },
   "homepage": "https://github.com/jlgraves3/wdi-project_02-food-diary#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
     "ejs": "^2.5.7",
     "express": "^4.15.3",
+    "express-session": "^1.15.4",
     "isomorphic-fetch": "^2.2.1",
     "method-override": "^2.3.9",
     "moment": "^2.18.1",
     "morgan": "^1.8.2",
     "nodemon": "^1.11.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "pg-promise": "^6.3.6"
   }
 }
